Fix button alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11908,8 +11908,15 @@ textarea.form-control-lg {
   font-family: "Open Sans";
 }
 
+.center-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
 .collapse-button {
   cursor: hover;
+  padding: 1.25rem 2rem;
+  font-family: "Oswald", Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
